environments/dev/vpc/1-vpc.tf
resource "aws_vpc" "k8s-vpc" {

    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true
    enable_dns_support = true
    tags = {
      Name = "k8s-vpc"
      Owner = "MJ"
    }
}
